Small changes in Views

--- a/Olympics/Views/Athlete/List.cshtml
+++ b/Olympics/Views/Athlete/List.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "List";
 }
 
-<h1>List</h1>
+<h1>Athletes List</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="DisplayCreate">Create New Athlete</a>
 </p>
 <table class="table">
     <thead>
