--- a/Olympics/Views/Athlete/Create.cshtml
+++ b/Olympics/Views/Athlete/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>AthleteModel</h4>
+<h4>Athlete</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -35,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="List">Back to Athletes List</a>
 </div>
 
 @section Scripts {
