--- a/Olympics/Views/Shared/_Layout.cshtml
+++ b/Olympics/Views/Shared/_Layout.cshtml
@@ -28,7 +28,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Athlete" asp-action="List">Athletes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Athlete" asp-action="DisplayCreate">Add New Athlete</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Country" asp-action="List">Countries</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Sport" asp-action="List">Sports</a>
                         </li>
                     </ul>
                 </div>
