--- a/Olympics/Views/Country/List.cshtml
+++ b/Olympics/Views/Country/List.cshtml
@@ -1,20 +1,19 @@
-﻿@model List<AthleteModel>
+﻿@model List<CountryModel>
 
 @{
     ViewData["Title"] = "List";
 }
 
-<h1>Athletes List</h1>
+<h1>Countries List</h1>
 
 <p>
-    <a asp-action="DisplayCreate">Create New Athlete</a>
+    <a asp-action="DisplayCreate">Create New Country</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>Name</th>
-            <th>Surname</th>
             <th>Country</th>
+            <th>Country Code</th>
             <th></th>
         </tr>
     </thead>
@@ -22,13 +21,10 @@
 @foreach (var item in @Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Surname)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.CountryName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CountryCode)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
